Increase AbstractOplogFetcher timeout in initial_sync_during_stepdown.js

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • Fully Compatible
    • ALL
    • Repl 2020-01-13
    • 18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      initial_sync_during_stepdown.js causes the oplog query for initial sync to hang on a failpoint, which can cause it to time out. We should increase the network timeout to prevent this test from failing spuriously.

      While we're here, we should ensure the test clears the logs before calling checkLog.

            Assignee:
            Tess Avitabile (Inactive)
            Reporter:
            Tess Avitabile (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: