SERVER-45353 Increase AbstractOplogFetcher timeout in initial_sync_during_stepdown.js